--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.0",
     "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
@@ -19,6 +20,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
+    "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
@@ -34,6 +36,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-input-mask": "^3.0.2",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
