added: charts to dashboard

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@phosphor-icons/react": "^2.0.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
