--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@phosphor-icons/react": "^2.0.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
-    "formik": "^2.2.9",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
